fix typo in manpage

--- a/doc/man/httpdirfs.1
+++ b/doc/man/httpdirfs.1
@@ -8,7 +8,7 @@ HTTPDirFS \- filesystem client for HTTP directory listing
 HTTPDirFS is program that can be used to mount HTTP directory listings
 (generated using an Apache DirectoryIndex, for example) as a virtual filesystem
 through the FUSE interface. It supports HTTP basic authentication and proxy.
-.Sh OPTIONS
+.SH OPTIONS
 .SS "General options:"
 .TP
 \fB\-o\fR opt,[opt...]
